--- a/login.html
+++ b/login.html
@@ -12,9 +12,11 @@
 <body>
 <header></header>
 
+<video src = "images/harmonyhub_bgvideo.mp4" muted loop autoplay class = "back_video"></video>
 <main class="container" id="mainContent">
     <div class="row">
         <div class="offset-md-3 col-md-6 col-sm-12">
+            <br><br><br>
             <div class="login" id="contentArea">
                 <h1 class="display-4">Login</h1>
 
@@ -62,11 +64,17 @@
     </div>
 </main>
 
+
+<footer>
+    <nav id="footerNav" class="navbar navbar-dark  d-flex justify-content-center">
+    </nav>
+</footer>
+
 <!--<Scripting Section>-->
 <script src="./node_modules/jquery/dist/jquery.min.js"></script>
 <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-<script src="scripts/namespace.js"></script>
-<script src="scripts/user.js"></script>
-<script src="scripts/app.js"></script>
+<script src="script/namespace.js"></script>
+<script src="script/user.js"></script>
+<script src="script/app.js"></script>
 </body>
 </html>
