--- a/index.html
+++ b/index.html
@@ -6,21 +6,35 @@
 
     <link rel = "stylesheet" href = "./node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel = "stylesheet" href = "./node_modules/@fortawesome/fontawesome-free/css/all.css">
-    <script src="./node_modules/jquery/dist/jquery.min.js"></script>
-    <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel = "stylesheet" href = "./content/app.css">
 
 </head>
 <body>
-    <header>
 
-    </header>
+<header>
+</header>
+
 <main class = "container">
-    <h1>Welcome to our Website</h1>
-    <button type="button" class="btn btn-primary" id ="AboutUsBtn">About Us</button>
+    <video src = "images/harmonyhub_bgvideo.mp4" muted loop autoplay class = "back_video"></video>
+    <div class="content">
+        <h1> Welcome to our Website</h1>
+
+
+    </div>
+
 </main>
 
-    <script src="./node_modules/jquery/dist/jquery.min.js"></script>
-    <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="scripts/app.js"></script>
+<footer>
+    <nav id="footerNav" class="navbar navbar-dark  d-flex justify-content-center">
+    </nav>
+</footer>
+
+
+<!--<Scripting Section>-->
+<script src="./node_modules/jquery/dist/jquery.min.js"></script>
+<script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+<script src="./script/app.js"></script>
+
+
 </body>
 </html>
