--- a/register.html
+++ b/register.html
@@ -12,18 +12,23 @@
 <body>
 <header>
 </header>
+<video src = "images/harmonyhub_bgvideo.mp4" muted loop autoplay class = "back_video"></video>
 <main class="container" id="mainContent">
     <div class="row">
         <div class="offset-md-3 col-md-6 col-sm-12">
+            <br><br>
             <div class="login" id="contentArea">
                 <h1 class="display-4">Register</h1>
+
+                <div id="messageArea"></div>
+
                 <form id="registerForm" novalidate>
                     <p class="hint-text">Create your own account. It's free and only takes a minute.</p>
 
                     <div class="form-group">
-                        <div class="row">
+                        <div class="row" >
                             <div class="col-md-6">
-                                <input class="form-control" type="text" name="firstName" id="FirstName" placeholder="First Name" required>
+                                <input class="form-control" type="text" name="firstName" id="firstName" placeholder="First Name" required>
                             </div>
                             <div class="col-md-6">
                                 <input class="form-control" type="text" name="lastName" id="lastName" placeholder="Last Name" required>
@@ -40,6 +45,17 @@
                             </div>
                         </div>
 
+                    </div>
+
+                    <div class="form-group">
+                        <div class="row">
+                            <div class="col-md-6">
+                                <input class="form-control" type="text" name="address" id="address" placeholder="Address" required>
+                            </div>
+                            <div class="col-md-6">
+                                <input class="form-control" type="text" name="contactNumber" id="contactNumber" placeholder="Phone Number" required>
+                            </div>
+                        </div>
                     </div>
 
                     <div class="form-group">
@@ -77,11 +93,17 @@
     </div>
 </main>
 
+<footer>
+    <nav id="footerNav" class="navbar navbar-dark  d-flex justify-content-center">
+    </nav>
+</footer>
+
 <!--<Scripting Section>-->
 <script src="./node_modules/jquery/dist/jquery.min.js"></script>
 <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-<script src="scripts/namespace.js"></script>
-<script src="scripts/contact.js"></script>
-<script src="scripts/app.js"></script>
+<script src="script/namespace.js"></script>
+<script src="script/user.js"></script>
+<script src="script/app.js"></script>
+
 </body>
 </html>
